Use Fell typeface
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>crypto-for-kid</title>
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
