--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>crypto-for-kid</title>
+  <title>crypto-for-kids</title>
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+English" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
