Add the alphabet table
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
+<table>
+<tr><td> </td><td>0</td><td>00000</td></tr>
+<tr><td>A</td><td>1</td><td>00001</td></tr>
+<tr><td>B</td><td>2</td><td>00010</td></tr>
+<tr><td>C</td><td>3</td><td>00011</td></tr>
+<tr><td>D</td><td>4</td><td>00100</td></tr>
+<tr><td>E</td><td>5</td><td>00101</td></tr>
+<tr><td>F</td><td>6</td><td>00110</td></tr>
+<tr><td>G</td><td>7</td><td>00111</td></tr>
+<tr><td>H</td><td>8</td><td>01000</td></tr>
+<tr><td>I</td><td>9</td><td>01001</td></tr>
+<tr><td>J</td><td>10</td><td>01010</td></tr>
+<tr><td>K</td><td>11</td><td>01011</td></tr>
+<tr><td>L</td><td>12</td><td>01100</td></tr>
+<tr><td>M</td><td>13</td><td>01101</td></tr>
+<tr><td>N</td><td>14</td><td>01110</td></tr>
+<tr><td>O</td><td>15</td><td>01111</td></tr>
+<tr><td>P</td><td>16</td><td>10000</td></tr>
+<tr><td>Q</td><td>17</td><td>10001</td></tr>
+<tr><td>R</td><td>18</td><td>10010</td></tr>
+<tr><td>S</td><td>19</td><td>10011</td></tr>
+<tr><td>T</td><td>20</td><td>10100</td></tr>
+<tr><td>U</td><td>21</td><td>10101</td></tr>
+<tr><td>V</td><td>22</td><td>10110</td></tr>
+<tr><td>W</td><td>23</td><td>10111</td></tr>
+<tr><td>X</td><td>24</td><td>11000</td></tr>
+<tr><td>Y</td><td>25</td><td>11001</td></tr>
+<tr><td>Z</td><td>26</td><td>11010</td></tr>
+<tr><td>.</td><td>27</td><td>11011</td></tr>
+<tr><td>,</td><td>28</td><td>11100</td></tr>
+</table>
+
 <h1 id="section">1.</h1>
 <p>Professor Krankenstein was the most influential genetic engineer of his time.</p>
 <p>When, in the spring of 2030, he almost incidentally invented the most terrible biological weapon known to humanity it took him about three seconds to realize that should his invention fall into the hands of one of the superpowers -- or into the hands of any common idiot, really -- it could well mean the end of the human race.</p>
@@ -120,19 +153,19 @@
 <p>The rest of the sheet was empty except for holographic seal of High Command of Proximian Insurgency.</p>
 <p>&quot;Comandante Ribeira is no fool,&quot; he said, &quot;And this scrap of paper is not going to convince me that he's going to split his forces and attack both those places at the same time. Our strategic machines are vastly more powerful than Proximian ones, they've been running hot for the past week and out lab rats tell us that there's no way to win that way.&quot;</p>
 <p>&quot;You are right, O leader of men,&quot; I said.</p>
-<p>I knew that this kind of empty flattery was used at the Sublime Porte but I was not sure whether it wasn't reserved for the sultan alone.</p>
+<p>I knew that this kind of empty flattery was used at the Sublime Porte but I was not sure whether it wasn't reserved for the sultan alone. Anyway, it was worth a try.</p>
 <p>Qgdzzxoglu smiled snarkily but haven't said anything. Maybe I was going to live in the end.</p>
 <p>&quot;I have no loyalty for the Proximian cause and before the rebelion I have lived happily and had no thoughts of betrayal. And now, hoping for your mercy, I am going to disclose the true meaning of this message to you.&quot;</p>
 <p>&quot;It is a code, O you, whose slipper weights heavily upon the neck of nations,&quot; I said, &quot;The recepient is supposed to ignore the first sentence and only follow the second one.&quot;</p>
 <p>I hoped I haven't overdone it. Being honest with the enemy is hard.</p>
 <p>&quot;So you are trying to convince me that de Ribeira is going to attack Iconium,&quot; he gave me a sharp look, apparently trying to determine whether I was lying or not. &quot;And you know what? We've got our reports. And our reports are saying that rebels will try to trick us into moving all our forces into Iconium and then attack pashalik of Phlesmus while it's undefended. And if that's what you are trying to do bad things are going to happen to your proboscis.&quot;</p>
-<p>&quot;The Most Holy Cross, John XXIII and Our Lady of Africa have already got a command to move to Iconium cluster. And you should expect at least comparable fire force from elsewhere.&quot;</p>
+<p>&quot;The Most Holy Cross, John XXIII and Our Lady of Africa have already got a command to move to Iconium cluster. And you should expect at least comparable fire force coming from elsewhere.&quot;</p>
 <p>...</p>
 <p>The messenger has no intention to suffer to win someone else's war. At the same time it's clear that if he continues to tell truth he will be tortured. So he says that general is right and it's the first sentence that should be taken into account.</p>
 <p>The general begins to feel a bit uneasy at this point. He has two contradictory confessions and it's not at all clear which one is correct.</p>
 <p>He orders the torture to proceed only to make the messager change his confession once again.</p>
 <p>...</p>
-<p>“Today, the God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You just cannot give them away and whether you want to or not matters little.”</p>
+<p>“Today, the God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You cannot give them away and whether you want to or not matters little.”</p>
 <h1 id="section-4">54.</h1>
 <p>Here's a simple game for kids that shows how asymmetric encryption works in principle, makes the fact that with only public key at your disposal encryption may be easy while decryption may be so hard as to be basically impossible, intuitive and gives everyone a hands-on experience with a simple asymmetric encryption system.</p>
 <p>Here's how it works:</p>
@@ -172,10 +205,10 @@
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
 <h1 id="section-6">99.</h1>
-<p>Mr. X is approached in the subway by a guy who claims to be an alien stranded on Earth and to possess time machine that allows him to know the future. He needs funds to fix his flying saucer but filling in winning numbers for next week's lottery would create a time paradox. Therefore, he's willing to sell next week's winning numbers to Mr. X at a favourable price.</p>
-<p>Mr. X, as gullible as he is, feels that this may be a scam and asks for a proof. Alien gives him the next week's winning numbers in encrypted form so that Mr. X can't use them and then decide not to pay for them. After the lottery draw he'll give Mr. X the key to unlock the file and Mr. X can verify that the prediction was correct.</p>
+<p>Mr. Xi is approached in the subway by a guy who claims to be an alien stranded on Earth and to possess time machine that allows him to know the future. He needs funds to fix his flying saucer but filling in winning numbers for next week's lottery would create a time paradox. Therefore, he's willing to sell next week's winning numbers to Mr. Xi at a favourable price.</p>
+<p>Mr. Xi, as gullible as he is, feels that this may be a scam and asks for a proof. Alien gives him the next week's winning numbers in encrypted form so that Mr. Xi can't use them and then decide not to pay for them. After the lottery draw he'll give Mr. Xi the key to unlock the file and Mr. Xi can verify that the prediction was correct.</p>
 <p>After the draw, Mr. X gets the key and lo and behold, the numbers are correct! To rule out the possibility that it happened by chance, they do the experiment twice. Then thrice.</p>
-<p>Finally, Mr. X is persuaded. He pays the alien and gets the set of numbers for the next week's draw.</p>
+<p>Finally, Mr. Xi is persuaded. He pays the alien and gets the set of numbers for the next week's draw.</p>
 <p>But the numbers drawn are completely different.</p>
 <p>And now the question: How did the scam work?</p>
 <p>NOTE: The claim about the time paradox is super weak. To improve the story the alien can ask for something non-monetary (sex, political influence). Or, more generally, positive demonstration of knowledge of the future can be used to make people do what you want. E.g. &quot;I know that an asteroid is going to destroy Earth in one year. Give me all your money to build a starship to save you.&quot;</p>
