--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
 <p>Things haven't gone well. News reported that Americans and Chinese were approaching the area while Amor Patrio's engine broke and the crew was working around the clock to fix it.</p>
 <p>Finally, they fixed it and approached Mariana Trench.</p>
 <p>It was at that point that the news reached them: The box was found by Russians and transported to Moscow. It was now stored in the vault underneath KGB headquarters. There was a whole division of spetsnaz guarding the building. The building itself was filled with special agents, each trained in twelve ways of silently killing a person.</p>
-<p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
-<p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
-<p>The silence is almost palpable.</p>
-<p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
+<p>Continue reading at section 92.</p>
 <h1 id="section-1">13.</h1>
 <p>No full story yet, but let's assume a king is at a quest. At some point he realizes that a small item, say a specific hairpin, is needed to complete the quest. He clearly remembers he used to own the hairpin, but he has no idea whether it's still in his possession and if so, where exactly it is. He sends a messenger home asking his counsellors to look for the hairpin and let him know whether they've found it or not.</p>
 <p>King's enemies need that information as well so the next day, when the messager is returning, they ambush him and take the message. Unfortunately, the message is encrypted. The messager himself knows nothing about the pin.</p>
@@ -206,7 +203,12 @@
 <p>SMUGGLER: Ok, got it, let's meet there in an hour!</p>
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
-<h1 id="section-6">99.</h1>
+<h1 id="section-6">92.</h1>
+<p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
+<p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
+<p>The silence is almost palpable.</p>
+<p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
+<h1 id="section-7">99.</h1>
 <p>Mr. Xi is approached in the subway by a guy who claims to be an alien stranded on Earth and to possess time machine that allows him to know the future. He needs funds to fix his flying saucer but filling in winning numbers for next week's lottery would create a time paradox. Therefore, he's willing to sell next week's winning numbers to Mr. Xi at a favourable price.</p>
 <p>Mr. Xi, as gullible as he is, feels that this may be a scam and asks for a proof. Alien gives him the next week's winning numbers in encrypted form so that Mr. Xi can't use them and then decide not to pay for them. After the lottery draw he'll give Mr. Xi the key to unlock the file and Mr. Xi can verify that the prediction was correct.</p>
 <p>After the draw, Mr. X gets the key and lo and behold, the numbers are correct! To rule out the possibility that it happened by chance, they do the experiment twice. Then thrice.</p>
