--- a/index.html
+++ b/index.html
@@ -209,12 +209,36 @@
 <p>The silence is almost palpable.</p>
 <p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
 <h1 id="section-7">99.</h1>
-<p>Mr. Xi is approached in the subway by a guy who claims to be an alien stranded on Earth and to possess time machine that allows him to know the future. He needs funds to fix his flying saucer but filling in winning numbers for next week's lottery would create a time paradox. Therefore, he's willing to sell next week's winning numbers to Mr. Xi at a favourable price.</p>
-<p>Mr. Xi, as gullible as he is, feels that this may be a scam and asks for a proof. Alien gives him the next week's winning numbers in encrypted form so that Mr. Xi can't use them and then decide not to pay for them. After the lottery draw he'll give Mr. Xi the key to unlock the file and Mr. Xi can verify that the prediction was correct.</p>
-<p>After the draw, Mr. X gets the key and lo and behold, the numbers are correct! To rule out the possibility that it happened by chance, they do the experiment twice. Then thrice.</p>
-<p>Finally, Mr. Xi is persuaded. He pays the alien and gets the set of numbers for the next week's draw.</p>
-<p>But the numbers drawn are completely different.</p>
+<p>It was cold. The winter was approaching in New York. Mr. Xi wrapped his coat tighter to the body and stared into the dark tunnel with desperation. The subway was late. There must have been an accident somewhere. He sighed.</p>
+<p>&quot;Beg your pardon, mister,&quot; said a men standing besides him on the platform. Mr. Xi was not able to tell the accent. It sounded strange but not entirely alien.</p>
+<p>&quot;I have a matter to discuss with you,&quot; said the stranger &quot;but I am not sure how to approach it without making you think I am off my rocker.&quot;</p>
+<p>&quot;Give it a try,&quot; said Mr. Xi &quot;it looks like we are going to wait here for a while.&quot;</p>
+<p>&quot;Well, let me put it this way: You were born in 1970 in Jersey City, married to Jane Reyes in 1989, two kids, you work as an accountant at...&quot;</p>
+<p>&quot;Who are you? Police?&quot;</p>
+<p>&quot;No. Let me finish. In couple of months you are going to get rich. In two years you'll own your own accounting agency. In 2025 you will make a trip around the world. I won't tell you when you are going to die. That's a curse rather than help. But let me at least assure you you have a long life in front of you. In short, I am coming from the future.&quot;</p>
+<p>&quot;You really are off your rocker.&quot;</p>
+<p>&quot;I though you'll think so. That's why I checked out details about your life before I left. Have I failed to convince you?&quot;</p>
+<p>&quot;You tell people you are from the future and you expect them to believe you?&quot;</p>
+<p>&quot;I guess that was naive from me. Anyway, I have a better proof. Take this paper. There are winning numbers of the next week draw of the lottery. I've encrypted them so that you cannot use them. But there are instructions to decrypt it on the paper. I'll send you the decryption key next week, after the draw. We will speak together again. Until then, farewell.&quot;</p>
+<p>He made a little bow and disappeared before Mr. Xi managed to respond.</p>
+<p>He looked at the paper, confused and put it into his pocket.</p>
+<hr />
+<p>Next week he finds a letter in hix post box. It contains the key. The instructions on the paper say that the cypher is so called 'one-time pad' and explains how to decrypt it. Following the istrcutions is easy for an accountant. In no time Mr. Xi gets the message: &quot;The winning numbers are three, thirteen,twenty seven,twenty eight and fifty.&quot; He hurries to the closest newspaper stand and checks the numbers. They match.</p>
+<p>When they meet again the next time Mr. Xi admits that he is impressed. The time traveller explains that he came to the past to pursue a specific goal that has nothing to do with Mr. Xi. To get seed money he have looked up the winner of largest jackpot this year in the old newspaper and it turned to be Mr. Xi. &quot;So I figured out that what happened was that I got back in time, told you the numbers and you've won.&quot;</p>
+<p>&quot;Here's the deal: You give me $100,000 which is enough to do what I need to do here and you give you the numbers. You, in turn, will get rich in two months.&quot;</p>
+<p>&quot;That sounds suspicious,&quot; says Mr. Xi &quot;Why don't you just make the bet yourself?&quot;</p>
+<p>The time traveller sighs: &quot;If it was that easy, I wouldn't be talking to you in the first place. The problem with time travel is that you have to avoid creating causal loops. Like killing your grandfather. You must have heard about that one.&quot;</p>
+<p>Mr. Xi shrugs buy doesn't say anything.</p>
+<p>&quot;In short,&quot; says the traveller &quot;using my knowledge from the future to win money in the past creates exactly such a loop. I would be risking getting wiped out of the time. It would be as if I never existed at all.&quot;</p>
+<p>&quot;Luckily though, there's a trick to avoid that. If you give me your money out of your free will, it's completely unrelated to my time trip and it won't create a time loop. Similarly, if you give you the numbers, it won't change anything -- as you recall I've already seen the announcement about you winning the lotery in the newspaper.&quot;</p>
+<p>&quot;$100,000 is a lot of money,&quot; says Mr. Xi &quot;almost all my savings. Can we do yet another test?&quot;</p>
+<p>&quot;What kind of test would you like?&quot;</p>
+<p>&quot;What will be the weather tomorrow?&quot;</p>
+<p>The travller shrugs: &quot;You can look that up yourself in weather forecast section in the newspaper.&quot;</p>
+<p>He thinks a little and proposes: &quot;Let's do the lottery trick again. I'll give you the numbers for the next week's draw. Once it may have been a coincidence, although an unlikely one, but twice, that must convince everybody.&quot;</p>
+<p>Mr. Xi agrees, gets a paper with encrypted numbers once again and, after getting a new key and decyphering the message, gets the winning numbers once again. Finally, he is persuaded.</p>
+<p>He pays the alien and gets the set of numbers for the next month's draw.</p>
+<p>But when the draw comes the numbers are different. To add insult to injury he wins $10.</p>
 <p>And now the question: How did the scam work?</p>
-<p>NOTE: The claim about the time paradox is super weak. To improve the story the alien can ask for something non-monetary (sex, political influence). Or, more generally, positive demonstration of knowledge of the future can be used to make people do what you want. E.g. &quot;I know that an asteroid is going to destroy Earth in one year. Give me all your money to build a starship to save you.&quot;</p>
 </body>
 </html>
