A puzzle added to the time traveller story.
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
 <p>To distribute the public key to everyone involved in the game you can either buy multiple copies of English-Eskimo dictionary, which may be expensive, or you can simply place a single copy at a well-known location. In school library, at a local mom-and-pop shop or at a secret place known only to the game participants.</p>
 <p>If a kid wants to send an encrypted message to the owner of the secret key, they just use the public key (English-Eskimo dictionary) to translate the message, word-by-word, from English to Eskimo. The owner of the secret key (Eskimo-English dictionary) can then easily decrypt the message by translating it back into English.</p>
 <p>However, if the message gets intercepted by any other game participant, decrypting it would be an extremely time consuming activity. Each word of the message would have to be found in English-Eskimo dictionary, which would in turn mean scanning the whole dictionary in a page-by-page and word-by-word manner!</p>
-<h1 id="section-5">78.</h1>
+<h1 id="section-5">65.</h1>
+<p>Have you figured out how the trick was done?</p>
+<p>If so, find a key that will turn following cyphertext</p>
+<pre><code>ZUWLCELJCKKXV ZF,MP EOWZ,HB</code></pre>
+<p>into a plaintext saying:</p>
+<p>BEWARE OF THE ONE EYED MAN!</p>
+<h1 id="section-6">78.</h1>
 <p>It's a puppet show. There are two hills on the stage with country border between them. Law-abiding citizen is on the right hill. Smuggler enters the stage on the left.</p>
 <p>SMUGGLER: Hey, you!</p>
 <p>CITIZEN: Who? Me?</p>
@@ -203,12 +209,12 @@
 <p>SMUGGLER: Ok, got it, let's meet there in an hour!</p>
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
-<h1 id="section-6">92.</h1>
+<h1 id="section-7">92.</h1>
 <p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
 <p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
 <p>The silence is almost palpable.</p>
 <p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
-<h1 id="section-7">99.</h1>
+<h1 id="section-8">99.</h1>
 <p>It was cold. The winter was approaching in New York. Mr. Xi wrapped his coat tighter to the body and stared into the dark tunnel with desperation. The subway was late. There must have been an accident somewhere. He sighed.</p>
 <p>&quot;Beg your pardon, mister,&quot; said a men standing besides him on the platform. Mr. Xi was not able to tell the accent. It sounded strange but not entirely alien.</p>
 <p>&quot;I have a matter to discuss with you,&quot; said the stranger &quot;but I am not sure how to approach it without making you think I am off my rocker.&quot;</p>
@@ -240,5 +246,6 @@
 <p>He pays the alien and gets the set of numbers for the next month's draw.</p>
 <p>But when the draw comes the numbers are different. To add insult to injury he wins $10.</p>
 <p>And now the question: How did the scam work?</p>
+<p>If so move 34 sections backwards.</p>
 </body>
 </html>
