--- a/index.html
+++ b/index.html
@@ -59,12 +59,22 @@
 <p>Finally, they fixed it and approached Mariana Trench.</p>
 <p>It was at that point that the news reached them: The box was found by Russians and transported to Moscow. It was now stored in the vault underneath KGB headquarters. There was a whole division of spetsnaz guarding the building. The building itself was filled with special agents, each trained in twelve ways of silently killing a person.</p>
 <p>Continue reading at section 92.</p>
-<h1 id="section-1">13.</h1>
+<h1 id="section-1">5.</h1>
+<p>Imagine it's two o'clock. What will be the time in five hours?</p>
+<p><img src="clock.png" /></p>
+<p>Seven o'clock, right? It's easy. 2 + 5 = 7.</p>
+<p>But here's a trick question: It's ten o'clock. What time will it be in five hours?</p>
+<p>10 + 5 = 15, but there's no such thing as fifteen o'clock.</p>
+<p>When the hand moves beyond 12 it's one o'clock again.</p>
+<p>What we can do is to do the addition and then subtract 12 if the result is larger than 12: 10 + 5 - 12 = 3.</p>
+<p>And here's a question for you: Imagine your friend calls you at 8:00am on Monday and says you are going to meet in 154 hours. On which weekday and exactly at which hour will you meet?</p>
+<p>Once you've solved the problem take that time (the hours part) and multiply it by seven. Continue reading at that section.</p>
+<h1 id="section-2">13.</h1>
 <p>No full story yet, but let's assume a king is at a quest. At some point he realizes that a small item, say a specific hairpin, is needed to complete the quest. He clearly remembers he used to own the hairpin, but he has no idea whether it's still in his possession and if so, where exactly it is. He sends a messenger home asking his counsellors to look for the hairpin and let him know whether they've found it or not.</p>
 <p>King's enemies need that information as well so the next day, when the messager is returning, they ambush him and take the message. Unfortunately, the message is encrypted. The messager himself knows nothing about the pin.</p>
 <p>Many experienced cryptographers are working around the clock for days in row to decrypt the message but to no avail.</p>
 <p>Finally, a kid wanders into the war room. She asks about what they are doing and after some thinking she says: &quot;I know nothing about the high art of cryptography and in no way I can compare to esteemed savants in this room. What I know, though, is that King's pallace has ten thousand rooms, each full of luxury, pictures and finely carved furniture. To find a hairpin in such a place can take weeks if not months. If there was no hairpin it would take at least that long before they could send the messenger back with negative reply. So, if the messager was captured on his way back on the very next day, it can mean only a single thing: The hairpin was found and your encrypted message says so.&quot;</p>
-<h1 id="section-2">20.</h1>
+<h1 id="section-3">20.</h1>
 <p>Here Legrand, having re-heated the parchment, submitted It my inspection. The following characters were rudely traced, in a red tint, between the death's-head and the goat:</p>
 <pre><code>53++!305))6*;4826)4+.)4+);806*;48!8`60))85;]8*:+*8!83(88)5*!;
 46(;88*96*?;8)*+(;485);5*!2:*+(;4956*2(5*-4)8`8*; 4069285);)6
@@ -137,7 +147,7 @@
 <p>&quot;I reflected that it had been a point with the writer to run his words together without division, so as to increase the difficulty of solution. Now, a not overacute man, in pursuing such an object, would be nearly certain to overdo the matter. When, in the course of his composition, he arrived at a break in his subject which would naturally require a pause, or a point, he would be exceedingly apt to run his characters, at this place, more than usually close together. If you will observe the MS., in the present instance, you will easily detect five such cases of unusual crowding. Acting on this hint, I made the division thus:</p>
 <p>'A good glass in the bishop's hostel in the devil's --twenty-one degrees and thirteen minutes --northeast and by north --main branch seventh limb east side --shoot from the left eye of the death's-head --a bee-line from the tree through the shot fifty feet out.'&quot;</p>
 <p>&quot;Even this division,&quot; said I, &quot;leaves me still in the dark.&quot;</p>
-<h1 id="section-3">25.</h1>
+<h1 id="section-4">25.</h1>
 <p>Johannes Trithemius was an medieval German abbott known for his book Polygraphia which is said to be the first published book on cryptography.</p>
 <p>However, in addition to Polygraphia he published a book called Steganographia which seems to be about magic. It describes a way how to deliver secret messages with the help of angels. The book induced a lot of opposition. Those who have read it in manustcipt were frightened by what appeared to be demonic names they thought the book is not appropriate for a pious Christian reader. When the book was finally published in 1606, 90 years after Trithemius' death, it also contained a short work called Clavis (The Key) which in very simple terms explains how what seemed to be incomprehensible diabolic language in book I and book II are actually ciphertexts. Despite that the book was believed to be about magic and was put on the Index of Prohibited Books by Catholic church in 1609.</p>
 <p>All that being said, book III is not explained in Clavis. Moreover it's much shorter than previous two books and contains almost no explanatory text. It's possibly unfinished.</p>
@@ -147,7 +157,7 @@
 <p>Look at them carefully and try to notice anything that may help you decypher them.</p>
 <p>Don't be lazy and actually take a look. This is your chance of getting a feeling of what the actual cryptanalysis feels like.</p>
 <p>If you've spent at least XV minutes trying to solve the puzzle and now you are out of your wits proceed to section LXXV and get your first hint.</p>
-<h1 id="section-4">32.</h1>
+<h1 id="section-5">32.</h1>
 <p>A portal suddenly opened on the starboard ejecting a fleet of imperial pursuit vessels. The propulsion system of my ship got hit before the shield activated. I’ve tried to switch on the backup drive but before it charged to 5% I was already dangling off a dozen tractor beams.</p>
 <p>It wasn’t much of a fight. They’ve just came and picked me up as one would pick up a box of frozen strawberries in a supermarket.</p>
 <p>I must have passed out because of pressure loss because the next thing I remember is being in a plain white room with my hands cuffed behind my back.</p>
@@ -175,7 +185,7 @@
 <p>He orders the torture to proceed only to make the messager change his confession once again.</p>
 <p>...</p>
 <p>“Today, the God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You cannot give them away and whether you want to or not matters little.”</p>
-<h1 id="section-5">54.</h1>
+<h1 id="section-6">54.</h1>
 <p>Here's a simple game for kids that shows how asymmetric encryption works in principle, makes the fact that with only public key at your disposal encryption may be easy while decryption may be so hard as to be basically impossible, intuitive and gives everyone a hands-on experience with a simple asymmetric encryption system.</p>
 <p>Here's how it works:</p>
 <p>Buy a dictionary of some exotic language. The language being exotic makes it improbable that any of the kids involved in the game would understand it. Also, it makes cheating by using Google Translate impossible.</p>
@@ -184,13 +194,13 @@
 <p>To distribute the public key to everyone involved in the game you can either buy multiple copies of English-Eskimo dictionary, which may be expensive, or you can simply place a single copy at a well-known location. In school library, at a local mom-and-pop shop or at a secret place known only to the game participants.</p>
 <p>If a kid wants to send an encrypted message to the owner of the secret key, they just use the public key (English-Eskimo dictionary) to translate the message, word-by-word, from English to Eskimo. The owner of the secret key (Eskimo-English dictionary) can then easily decrypt the message by translating it back into English.</p>
 <p>However, if the message gets intercepted by any other game participant, decrypting it would be an extremely time consuming activity. Each word of the message would have to be found in English-Eskimo dictionary, which would in turn mean scanning the whole dictionary in a page-by-page and word-by-word manner!</p>
-<h1 id="section-6">65.</h1>
+<h1 id="section-7">65.</h1>
 <p>Have you figured out how the trick was done?</p>
 <p>If so, find a key that will turn following cyphertext</p>
 <pre><code>ZUWLCELJCKKXV ZF,MP EOWZ,HB</code></pre>
 <p>into a plaintext saying:</p>
 <p>BEWARE OF THE ONE EYED MAN!</p>
-<h1 id="section-7">78.</h1>
+<h1 id="section-8">78.</h1>
 <p>It's a puppet show. There are two hills on the stage with country border between them. Law-abiding citizen is on the right hill. Smuggler enters the stage on the left.</p>
 <p>SMUGGLER: Hey, you!</p>
 <p>CITIZEN: Who? Me?</p>
@@ -219,14 +229,14 @@
 <p>SMUGGLER: Ok, got it, let's meet there in an hour!</p>
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
-<h1 id="section-8">88.</h1>
+<h1 id="section-9">88.</h1>
 <p><img src="trith1.png" /><br /><img src="trith2.png" /><br /><img src="trith3.png" /><br /><img src="trith4.png" /><br /><img src="trith5.png" /><br /><img src="trith6.png" /><br /><img src="trith7.png" /><br /><img src="trith8.png" /><br /><img src="trith9.png" /></p>
-<h1 id="section-9">92.</h1>
+<h1 id="section-10">92.</h1>
 <p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
 <p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
 <p>The silence is almost palpable.</p>
 <p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
-<h1 id="section-10">99.</h1>
+<h1 id="section-11">99.</h1>
 <p>It was cold. The winter was approaching in New York. Mr. Xi wrapped his coat tighter to the body and stared into the dark tunnel with desperation. The subway was late. There must have been an accident somewhere. He sighed.</p>
 <p>&quot;Beg your pardon, mister,&quot; said a men standing besides him on the platform. Mr. Xi was not able to tell the accent. It sounded strange but not entirely alien.</p>
 <p>&quot;I have a matter to discuss with you,&quot; said the stranger &quot;but I am not sure how to approach it without making you think I am off my rocker.&quot;</p>
