Images from steganographia simplified
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
 <h1 id="section-9">88.</h1>
-<p><img src="trith1.png" /><br /><img src="trith2.png" /><br /><img src="trith3.png" /><br /><img src="trith4.png" /><br /><img src="trith5.png" /><br /><img src="trith6.png" /><br /><img src="trith7.png" /><br /><img src="trith8.png" /><br /><img src="trith9.png" /></p>
+<p><img src="trithemius1.png" /></p>
 <h1 id="section-10">92.</h1>
 <p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
 <p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
